--- a/portfolio.html
+++ b/portfolio.html
@@ -22,55 +22,152 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <!-- <link rel="stylesheet" href="./css/media.css" /> -->
   </head>
   <body>
     <!--Header section-->
     <header class="header">
       <div class="container header-container">
-        <a class="logo-link link" href="./index.html" lang="en"
-          >Web<span class="logo-accent">Studio</span>
-        </a>
         <nav class="header-nav">
+          <a class="logo-link link" href="./index.html" lang="en"
+            >Web<span class="logo-accent">Studio</span>
+          </a>
           <ul class="header-list list">
             <li class="header-item">
-              <a class="header-link link" href="./index.html">Студія</a>
+              <a class="header-link link" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
-              <a class="header-link header-link-current link" href="./portfolio.html">Портфоліо</a>
+              <a class="header-link header-link-current link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="header-item"><a class="header-link link" href="#">Контакти</a></li>
+            <li class="header-item"><a class="header-link link" href="#">Contacts</a></li>
           </ul>
         </nav>
-        <ul class="header-list list">
-          <li class="header-item">
-            <a
-              class="header-mail link"
-              href="mailto:info@devstudio.com"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="envelope"
-            >
-              <svg class="mail-icon" width="16" height="12">
-                <use href="./images/icons.svg#envelope"></use>
-              </svg>
-              info@devstudio.com
-            </a>
-          </li>
-          <li class="header-item">
-            <a
-              class="header-tel link"
-              href="tel:+380961111111"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="smartphone"
-            >
-              <svg class="tel-icon" width="16" height="12">
-                <use href="./images/icons.svg#smartphone"></use>
-              </svg>
-              +38 096 111 11 11
-            </a>
-          </li>
-        </ul>
+        <button class="menu-open-btn" data-menu-open>
+          <svg class="menu-open-icon" width="32" height="22">
+            <use href="./images/icons.svg#menu-hamburger"></use>
+          </svg>
+        </button>
+        <address class="adress">
+          <ul class="adress-list list">
+            <li class="header-item">
+              <a
+                class="header-mail link"
+                href="mailto:info@devstudio.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="envelope"
+              >
+                info@devstudio.com
+              </a>
+            </li>
+            <li class="header-item">
+              <a
+                class="header-tel link"
+                href="tel:+110001111111"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="smartphone"
+              >
+                +11 (000) 111-11-11
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
+      <div class="mobile-menu" data-menu>
+        <div class="menu-container container">
+          <button class="menu-close-btn" data-menu-close>
+            <svg class="menu-close-icon" width="8" height="8">
+              <use href="./images/icons.svg#close"></use>
+            </svg>
+          </button>
+          <ul class="mobile-menu-list list">
+            <li class="mobile-menu-item">
+              <a class="mobile-menu-link mobile-menu-link-current link" href="./index.html"
+                >Studio</a
+              >
+            </li>
+            <li class="mobile-menu-item">
+              <a class="mobile-menu-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="mobile-menu-item"><a class="mobile-menu-link link" href="#">Contacts</a></li>
+          </ul>
+          <ul class="mobile-menu-adress-list list">
+            <li class="mobile-menu-item">
+              <a
+                class="mobile-menu-tel link"
+                href="tel:+110001111111"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="smartphone"
+              >
+                +11 (000) 111-11-11
+              </a>
+            </li>
+            <li class="mobile-menu-item">
+              <a
+                class="mobile-menu-mail link"
+                href="mailto:info@devstudio.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="envelope"
+              >
+                info@devstudio.com
+              </a>
+            </li>
+          </ul>
+          <ul class="mobile-menu-soc list">
+            <li class="mobile-menu-soc-item">
+              <a
+                class="mobile-menu-soc-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="insragram"
+              >
+                <svg class="mobile-menu-soc-icon" width="20" height="20">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-menu-soc-item">
+              <a
+                class="mobile-menu-soc-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="twitter"
+                ><svg class="mobile-menu-soc-icon" width="20" height="20">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-menu-soc-item">
+              <a
+                class="mobile-menu-soc-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="facebook"
+                ><svg class="mobile-menu-soc-icon" width="20" height="20">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-menu-soc-item">
+              <a
+                class="mobile-menu-soc-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="linkedin"
+                ><svg class="mobile-menu-soc-icon" width="20" height="20">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <!--Main section-->
@@ -109,9 +206,8 @@
                   />
                   <div class="overlay">
                     <p class="overlay-text">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                      приватну особу.
+                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                      Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                     </p>
                   </div>
                 </div>
@@ -133,9 +229,8 @@
                   />
                   <div class="overlay">
                     <p class="overlay-text">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                      приватну особу.
+                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                      Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                     </p>
                   </div>
                 </div>
@@ -157,9 +252,8 @@
                   />
                   <div class="overlay">
                     <p class="overlay-text">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                      приватну особу.
+                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                      Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                     </p>
                   </div>
                 </div>
@@ -181,9 +275,8 @@
                   />
                   <div class="overlay">
                     <p class="overlay-text">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                      приватну особу.
+                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                      Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                     </p>
                   </div>
                 </div>
@@ -205,9 +298,8 @@
                   />
                   <div class="overlay">
                     <p class="overlay-text">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                      приватну особу.
+                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                      Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                     </p>
                   </div>
                 </div>
@@ -229,9 +321,8 @@
                   />
                   <div class="overlay">
                     <p class="overlay-text">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                      приватну особу.
+                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                      Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                     </p>
                   </div>
                 </div>
@@ -253,9 +344,8 @@
                   />
                   <div class="overlay">
                     <p class="overlay-text">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                      приватну особу.
+                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                      Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                     </p>
                   </div>
                 </div>
@@ -277,9 +367,8 @@
                   />
                   <div class="overlay">
                     <p class="overlay-text">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                      приватну особу.
+                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                      Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                     </p>
                   </div>
                 </div>
@@ -301,9 +390,8 @@
                   />
                   <div class="overlay">
                     <p class="overlay-text">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                      приватну особу.
+                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                      Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                     </p>
                   </div>
                 </div>
@@ -320,32 +408,17 @@
     <!--Footer section-->
     <footer class="footer">
       <div class="container foter-container">
-        <div class="footer-logo-address">
+        <div class="footer-logo-txt">
           <a class="footer-logo-link logo-link link" href="./index.html" lang="en"
             >Web<span class="footer-logo-accent">Studio</span>
           </a>
-          <address>
-            <ul class="footer-list list">
-              <li class="footer-item">
-                <a
-                  class="footer-addres link"
-                  href="https://goo.gl/maps/m6pnY2zvGVCJ6Nes9"
-                  target="_blank"
-                  rel="noreferrer noopener"
-                  >м. Київ, пр-т Лесі Українки, 26</a
-                >
-              </li>
-              <li class="footer-item">
-                <a class="footer-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-              </li>
-              <li class="footer-item">
-                <a class="footer-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
-              </li>
-            </ul>
-          </address>
+          <p class="footer-txt">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
         </div>
         <div class="foter-socials">
-          <h3 class="foter-subtitle">приєднуйтесь</h3>
+          <h3 class="foter-subtitle">Social media</h3>
           <ul class="socials list">
             <li class="socials-item">
               <a
@@ -368,8 +441,9 @@
                 rel="noopener noreferrer"
                 aria-label="twitter"
                 ><svg class="foter-socials-icon" width="20" height="20">
-                  <use href="./images/icons.svg#twitter"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="socials-item">
               <a
@@ -379,8 +453,9 @@
                 rel="noopener noreferrer"
                 aria-label="facebook"
                 ><svg class="foter-socials-icon" width="20" height="20">
-                  <use href="./images/icons.svg#facebook"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
             </li>
             <li class="socials-item">
               <a
@@ -390,24 +465,23 @@
                 rel="noopener noreferrer"
                 aria-label="linkedin"
                 ><svg class="foter-socials-icon" width="20" height="20">
-                  <use href="./images/icons.svg#linkedin"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
         <div class="foter-mailing-list">
-          <h3 class="foter-subtitle">Підпишіться на розсилку</h3>
-          <div class="mailing-list">
-            <form>
-              <input type="email" name="email" placeholder="E-mail" />
-              <button type="submit" class="mailing-btn-submit">
-                Підписатися
-                <svg class="mailing-icon" width="24" height="24">
-                  <use href="./images/icons.svg#send"></use>
-                </svg>
-              </button>
-            </form>
-          </div>
+          <p class="foter-subtitle">Subscribe</p>
+          <form>
+            <input type="email" name="email" placeholder="E-mail" />
+            <button type="submit" class="mailing-btn-submit">
+              Subscribe
+              <svg class="mailing-icon" width="24" height="24">
+                <use href="./images/icons.svg#send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
